# PongPlusMore

./: .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  PpM_README.asciidoc  README.asciidoc  README.md  RPC.asciidoc
cmake/Modules/: FindSDL2.cmake
gtest/: CMakeLists.txt
jsoncpp/: CMakeLists.txt
plugins/: CMakeLists.txt  ppmlib.py
resources/: CMakeLists.txt  config.json
src/: Ball.cpp  Ball.h  Button.cpp  Button.h  CMakeLists.txt  CachedSurface.cpp  CachedSurface.h  EventHandler.h  EventSignals.cpp  EventSignals.h  EventState.cpp  EventState.h  Game.cpp  Game.h  GameSettings.cpp  GameSettings.h  GameState.cpp  GameState.h  Label.cpp  Label.h  MenuGameState.cpp  MenuGameState.h  Paddle.cpp  Paddle.h  PaddleController.hpp  PhysicsWorld.cpp  PhysicsWorld.h  RenderableEntity.h  SinglePlayerGameState.cpp  SinglePlayerGameState.h  Timer.hpp  common.cpp  common.h  render_text.cpp  render_text.h  scoped_init.hpp  vec.hpp  vector.cpp  vector.h  vector.hpp
src/GameStates/: MenuGameState.cpp  MenuGameState.h  SinglePlayerGameState.cpp  SinglePlayerGameState.h
src/PaddleControllers/: MousePaddleController.cpp  MousePaddleController.h  MousePaddleController.hpp  UnbeatableAIPaddleController.cpp  UnbeatableAIPaddleController.h
src/Physics/: SimplePhysicsWorld.cpp  SimplePhysicsWorld.h
src/client/: AnimationBase.h  Button.cpp  Button.h  CMakeLists.txt  CachedSurface.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  Label.cpp  Label.h  Label_Impl.hpp  Paddle.cpp  PaddleController.hpp  PaddleInput.h  PhysicsWorld.cpp  PhysicsWorld.h  RenderableEntity.h  abstract.hpp  assert.cpp  assert.h  cache.hpp  helper.h  input_impls.cpp  input_impls.h  layout.cpp  layout.h  pong.json  pong_plugin.cpp  ppm.cpp  render.cpp  render.h  render_text.cpp  render_text.h  sdl_cache.hpp  settings.cpp  settings.h  support.cpp  support.h  text.cpp  (+2 more)
src/client/GameStates/: MenuGameState.cpp  MenuGameState.h  MultiplayerSelectState.cpp  MultiplayerSelectState.h  OptionsMenuState.cpp  OptionsMenuState.h  PaddleGameState.cpp  PaddleGameState.h
src/client/PaddleControllers/: MousePaddleController.h  UnbeatableAIPaddleController.cpp
src/client/widgets/: Button.cpp  Button.h  Label.h  Label_Impl.hpp  Text_Box.cpp  Text_Box.h  helper.cpp  helper.h
src/common/: CMakeLists.txt  Cache.h  Cache.hpp  Cache_Base.hpp  IDManager.hpp  Timer.hpp  Volume.cpp  Volume.h  center.hpp  crash.hpp  deserialize.cpp  deserialize.h  serialize.cpp  serialize.h  template_util.hpp  util.cpp  util.h  vector.h  volume.cpp  volume.h
src/common/dump/: Object.hpp  Value.hpp
src/common/parse/: Generator.hpp  Object.hpp  Tuple.hpp  Value.hpp  helper.h  util.hpp
src/core/: CMakeLists.txt  engine.cpp  engine.h  methods.cpp  text.cpp  text.h  utility.h  widget_methods.cpp
src/core/common/: CMakeLists.txt  Cache.h  Cache_Impl.hpp  IDManager.hpp  ID_Gen.hpp  ID_Map.hpp  Timer.hpp  center.hpp  crash.hpp  log.cpp  log.h  maybe_owned.hpp  optional.h  result.h  template_utility.hpp  thread_local.h  translate.cpp  translate.h  utility.cpp  utility.h  vector.h  volume.cpp  volume.h
src/core/common/dump/: Object.hpp  helper.h
src/core/common/parse/: Object.hpp  Tuple.hpp  Value.hpp  forward.h  helper.h  util.hpp
src/core/common/parse/impl/: fundamental.h
src/core/common/pif/: Enum.hpp  Json_Value.hpp  Object.hpp  Tuple.hpp  Vector.hpp  forward.h  helper.h
src/core/common/pif/impl/: fundamental.h
src/core/io/: CMakeLists.txt  Logger.cpp  Logger.h  buffer.cpp  buffer.h  common.h  external_io.cpp  external_io.h  ipc.cpp  ipc.h  net.cpp  net.h
src/core/plugin/: CMakeLists.txt  Req_Dispatcher.cpp  Req_Dispatcher.h  plugins.cpp  plugins.h  req.cpp  req.h  response.cpp  response.h
src/core/render/: CMakeLists.txt  color.cpp  color.h  text.cpp  text.h  utility.cpp  utility.h
src/core/render/widgets/: Button.cpp  Button.h  ButtonSwitch.h  Label.h  Label_Impl.hpp  Text_Box.cpp  Text_Box.h
src/core/req/: req.h
src/core/rpc/: CMakeLists.txt  Req_Dispatcher.cpp  Req_Dispatcher.h  dispatch.cpp  dispatch.h  plugins.cpp  plugins.h  req.cpp  req.h
src/core/widgets/: ButtonSwitch.h  Label.h  Label_Impl.hpp  Text_Box.cpp  Text_Box.h
src/old/: deserialize.cpp  deserialize.h
src/old/client/: CMakeLists.txt  helper.cpp  input_impls.cpp  render.h
src/old/client/GameStates/: MenuGameState.h  MultiplayerSelectState.cpp  OptionsMenuState.h  PaddleGameState.h
src/plugins/: CMakeLists.txt  pong.json  pong_plugin.cpp
src/server/: AIClient.cpp  AIClient.h  Ball.h  CMakeLists.txt  Client.h  ConcreteServer.cpp  ConcreteServer.h  ConcreteServerStep.cpp  ControlInterface.cpp  ControlInterface.h  LocalServer.cpp  LocalServer.h  Logger.cpp  Logger.h  Node.hpp  Node_Iterator.hpp  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Paddle.h  Quadtree.cpp  Quadtree.h  Server.cpp  Server.h  Volume.h  World.cpp  World.h  collision_util.cpp  collision_util.h  enum_hash.hpp  exceptions.h  external_io.cpp  external_io.h  ipc.cpp  ipc.h  log.cpp  log.h  net.cpp  net.h  (+10 more)
tests/: CMakeLists.txt  CollisionUtilTests.cpp  ConcreteServerStepUtilTests.cpp  ConcreteServerTests.cpp  ObjectManagerTests.cpp  ServerTests.cpp  VectorTests.cpp
tests/common/: CacheTests.cpp  Cache_Tests.cpp  Dump_Tests.cpp  IDManagerTests.cpp  IDManager_Tests.cpp  Parse_Tests.cpp  UtilTests.cpp  Util_Tests.cpp  Vector_Tests.cpp  Volume_Tests.cpp
tests/core/io/: Pipe_IO_Tests.cpp
tests/core/plugins/: Json_Plugin_Tests.cpp
tests/server/: CollisionUtil_Tests.cpp  LocalServer_Tests.cpp  Node_Tests.cpp  QuadtreeTests.cpp  Quadtree_Tests.cpp
tests_catch/: CMakeLists.txt
tests_catch/common/: cache.cpp  idgen.cpp  utility.cpp  vector.cpp  volume.cpp
tests_catch/plugin/: msgpack_plugin.cpp  req_dispatcher.cpp
